--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
     "react-webcam": "https://esm.sh/react-webcam@^7.2.0",
+    "react-masonry-css": "https://esm.sh/react-masonry-css@^1.0.16?external=react,react-dom",
     "vite": "https://esm.sh/vite@^7.3.0",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
