--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="https://picsum.photos/32" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EventLens Pro</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script type="importmap">
 {
   "imports": {
@@ -14,6 +15,8 @@
     "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
     "react-webcam": "https://esm.sh/react-webcam@^7.2.0",
     "react-masonry-css": "https://esm.sh/react-masonry-css@^1.0.16?external=react,react-dom",
+    "canvas-confetti": "https://esm.sh/canvas-confetti@1.6.0",
+    "howler": "https://esm.sh/howler@2.2.3",
     "vite": "https://esm.sh/vite@^7.3.0",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
