--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
     "react-webcam": "https://esm.sh/react-webcam@^7.2.0",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "canvas-confetti": "https://esm.sh/canvas-confetti@^1.9.4",
-    "howler": "https://esm.sh/howler@^2.2.4"
+    "howler": "https://esm.sh/howler@^2.2.4",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
