feat: Enhance role-based access and login redirect
Refactors role-based access control logic in App.tsx to correctly handle MasterAdmins and implicit Photographer roles. This ensures that MasterAdmins attempting to access non-admin routes are redirected to `/admin`, and that logged-in users (excluding MasterAdmins in specific contexts) are treated as Photographers when appropriate.

Updates Login.tsx to use a dynamic `window.location.origin` for the Cognito redirect URI, improving support for multiple deployment environments beyond hardcoded production URLs.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
     "react-webcam": "https://esm.sh/react-webcam@^7.2.0",
     "canvas-confetti": "https://esm.sh/canvas-confetti@^1.9.4",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "jszip": "https://esm.sh/jszip@^3.10.1",
-    "file-saver": "https://esm.sh/file-saver@^2.0.5"
+    "file-saver": "https://esm.sh/file-saver@^2.0.5",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
